# etcminer

./: .gitignore  .travis.yml  BuildInfo.h.in  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  circle.yml
cmake/: variables.ps1.in  variables.sh.in
cmake/Hunter/: config.cmake
cmake/cable/: CableBuildInfo.cmake
docs/: BUILD.md  POOL_EXAMPLES_ETC.md
etcminer/: CMakeLists.txt  MinerAux.h  main.cpp
ethminer/: CMakeLists.txt
libapicore/: ApiServer.cpp  CMakeLists.txt
libethash/: ethash.h  internal.c  internal.h
libethash-cuda/: CMakeLists.txt
libhwmon/: wrapnvml.cpp
libpoolprotocols/: CMakeLists.txt
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
